# Mapache

./: .gitignore  LICENSE.txt  README.md  SIGNALS-OVERHAUL.md  codecov.yaml  docker-compose.yaml  docker-compose.yml  example.env  kerbecs.yaml
.github/: dependabot.yml
.github/workflows/: auth.yml  bahrain-tests.yml  build.yml  dashboard-tests.yml  dashboard.yml  deploy.yml  foreman.yml  gr24-test.yml  gr26.yml  ingest-tests.yml  jeddah-tests.yml  live.yml  mapache-go.yml  mapache-py.yml  publish.yml  query-tests.yml  query.yml  rigby-tests.yml  status.yml  tests.yml  vehicle.yml
assettocorsa/: Dockerfile  go.mod  main.go
assettocorsa/api/: api.go  ping.go  signal.go
assettocorsa/config/: config.go
assettocorsa/database/: batch.go  db.go
assettocorsa/model/: assettocorsa.go  dgps.go  message.go  wheels.go
assettocorsa/mqtt/: mqtt.go
assettocorsa/scripts/: test-env.sh
assettocorsa/service/: message.go  ping.go  rincon.go  signal.go
assettocorsa/utils/: config.go  logger.go
auth/: Dockerfile  Dockerfile.dev  go.mod  go.sum  main.go
auth/api/: api.go  auth.go  ping.go  user.go
auth/config/: config.go  verify.go
auth/database/: db.go
auth/model/: auth.go  user.go
auth/scripts/: deploy.sh  test.sh
auth/service/: auth.go  rincon.go  sentinel.go
auth/utils/: config.go  logger.go
bahrain/: Dockerfile  go.mod  go.sum  main.go
bahrain/config/: banner.go  config.go
bahrain/controller/: auth_controller.go  ping_controller.go  route_controller.go  user_controller.go
bahrain/database/: db.go
bahrain/model/: meta.go
bahrain/service/: auth_service.go  rincon_service.go  user_service.go
bahrain/utils/: config.go  config_test.go  logger.go  logger_test.go
dashboard/: .dockerignore  .eslintrc.cjs  Dockerfile  Dockerfile.dev  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
dashboard/src/: App.tsx  echarts-gl.d.ts  index.css  main.tsx
foreman/: Dockerfile  Dockerfile.dev  go.mod  go.sum  main.go
foreman/api/: api.go  job.go  ping.go  schedule.go  sse.go
foreman/config/: banner.go  config.go  verify.go
foreman/database/: db.go
foreman/model/: job.go  json.go  schedule.go
foreman/service/: job.go  reaper.go  schedule.go  scheduler.go
gr24/: Dockerfile  go.mod  go.sum  main.go
gr24/config/: config.go
gr24/controller/: acu_controller.go  bcm_controller.go  inverter_controller.go  middleware.go  mobile_controller.go  pedal_controller.go  ping_controller.go  (+4 more)
gr25/: Dockerfile  Makefile  go.mod  go.sum  main.go
gr26/: .air.toml  .gitignore  Dockerfile  Dockerfile.dev  go.mod  go.sum  main.go
ingest/: Dockerfile  example.env  go.mod  go.sum  main.go
jeddah/: Dockerfile  go.mod  go.sum  main.go
k8s/: auth-deployment.yaml  auth-service.yaml  gr25-deployment.yaml  gr25-service.yaml  jeddah-deployment.yaml  jeddah-service.yaml  kerbecs-configmap.yaml  kerbecs-deployment.yaml  kerbecs-service.yaml  nanomq-deployment.yaml  nanomq-service.yaml  query-deployment.yaml  query-service.yaml  rincon-deployment.yaml  rincon-service.yaml  vehicle-deployment.yaml  vehicle-service.yaml
kerbecs/: .gitignore  Dockerfile  go.mod  go.sum  main.go
live/: Dockerfile  Dockerfile.dev  go.mod  go.sum  main.go
mapache/: binary.go  go.mod  nodes.go
mapache-go/: binary.go  binary_test.go  dashboard.go  go.mod  json.go  json_test.go  message.go  message_test.go  ping.go  signal.go  signal_test.go  vehicle.go  vehicle_test.go
mapache-py/: pyproject.toml
mapache-py/.github/workflows/: ci.yml  publish.yml
mapache-py/src/mapache/: __init__.py  binary.py  message.py  ping.py  signal.py  vehicle.py
mapache-py/tests/: test_binary.py  test_message.py  test_vehicle.py
nodes/: binary.go  go.mod  nodes.go
query/: Dockerfile  Dockerfile.dev  Makefile  README.md  pyproject.toml  requirements.txt
query/docs/: mql-link-queries.md
query/query/: exceptions.py  main.py
query/query/config/: config.py
query/query/database/: clickhouse.py  clickhouse_client.py  connection.py
query/query/middleware/: logging.py
query/query/model/: error.py  log.py  query.py  signal_definition.py  token.py
query/query/resources/: query.txt  resources.py
query/query/routes/: clusters.py  ping.py  query.py  query_pairs.py  query_run.py  signal_definition.py  signals.py  token.py  video.py
query/query/service/: auth.py  auth_guard.py  cluster.py  decimate.py  json_safe.py  kerbecs.py  log.py  query.py  query_exec.py  query_lang.py  raw_signal.py  rincon.py  signal_definition.py  signals.py  token.py  trip.py  vehicle.py  video.py
query/scripts/: deploy.sh  run.sh  test.env  test.sh
query/service/: query_service.py
query/tests/: conftest.py  test_cluster.py  test_query.py  test_query_exec.py  test_query_lang.py  test_query_pairs.py
query_old/: main.py
rabbitmq/: advanced.config  rabbitmq.conf
rigby/: .gitignore  example.env  pyproject.toml
rigby/rigby/: main.py
rigby/rigby/nodes/: wheel.py
rigby/rigby/nodes/gr24/: ACU.py  bcm.py  central_imu.py  data_node.py  gps.py  pedal.py  pedals.py  wheel.py
rigby/rigby/utils/: binary.py  generator.py  mqtt.py
rigby/tests/: test.py
rigby/tests/nodes/gr24/: bcm_test.py  gps_test.py  pedal_test.py  wheel_test.py
rigby/tests/utils/: bin_factory_test.py  binary_test.py  generator_test.py
rincon/: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  main.go  openapi.json
scripts/: init-service.sh  release.sh
silverstone/: .gitignore  README.md  go.mod  go.sum  main.go
singlestore/: init.sql
trip/: Dockerfile  go.mod  go.sum  main.go
vehicle/: .air.toml  .gitignore  Dockerfile  Dockerfile.dev  go.mod  go.sum  main.go
(+531 files in other folders)
