[project]
name = "query"
version = "3.9.1"
description = ""
authors = [
    {name = "Bharat Kathi",email = "bkathi@ucsb.edu"},
    {name = "Jacob Jurek", email = "jacobjurek@ucsb.edu"},
    {name = "Madhav Viswesvaran", email = "madhav@ucsb.edu"},
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.115.10,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "dotenv>=0.9.9,<0.10.0",
    "sqlalchemy>=2.0.38,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "clickhouse-connect>=0.8.0,<0.9.0",
    "loguru>=0.7.3,<0.8.0",
    "requests>=2.32.3,<3.0.0",
    "pyjwt[crypto]>=2.11.0,<3.0.0",
    "mapache-py>=3.0.1,<4.0.0",
    "gr-ulid>=1.1.2,<2.0.0",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
]

[project.optional-dependencies]
# pip-installable dev extras (used by CI's `pip install -e ".[dev]"`).
dev = [
    "pytest>=8.0,<9",
    "httpx",
]

[project.scripts]
query = "query.main:main"

[dependency-groups]
# uv-native dev group (used by `uv run pytest` / `uv sync`). Mirrors the
# pip-installable [project.optional-dependencies].dev above.
dev = [
    "pytest>=8.0,<9",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
